--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <header>
-      <a>
-        <img src="img/svgs/logo.svg" alt="Gllacy Shop Logo">
-      </a>
+      <span>
+        <img src="img/logo.svg" alt="Gllacy Shop Logo">
+      </span>
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -29,10 +29,10 @@
           <button><img src="img/Search.png" alt="search item"></button>
         </li>
         <li>
-          <button type="button"><img src="img/svgs/entrance.svg" alt="login">Вход</button>
+          <button type="button"><img src="img/entrance.svg" alt="login">Вход</button>
         </li>
         <li>
-          <a href="img/svgs/basket.svg">Пусто</a>
+          <a href="img/basket.svg">Пусто</a>
         </li>
       </ul>
     </header>
@@ -75,25 +75,25 @@
           <ul>
             <li>
               <span>HIT</span>
-              <img src="img/catalog/1(1).png" alt="ice cream photo">
+              <img src="img/1(1).png" alt="ice cream photo">
               <p>310<span>₽/кг</span></p>
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </li>
             <li>
               <span>HIT</span>
-              <img src="img/catalog/1(2).png" alt="ice cream photo">
+              <img src="img/1(2).png" alt="ice cream photo">
               <p>380<span>₽/кг</span></p>
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </li>
             <li>
               <span>HIT</span>
-              <img src="img/catalog/1(3).png" alt="ice cream photo">
+              <img src="img/1(3).png" alt="ice cream photo">
               <p>355<span>₽/кг</span></p>
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </li>
             <li>
               <span>HIT</span>
-              <img src="img/catalog/2(1).png" alt="ice cream photo">
+              <img src="img/2(1).png" alt="ice cream photo">
               <p>415<span>₽/кг</span></p>
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </li>
@@ -105,17 +105,17 @@
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
-          <img src="img/svgs/ice-cream.svg" alt="ice cream icon">
+          <img src="img/ice-cream.svg" alt="ice cream icon">
           <p>Все наше мороженое изготавливается на собственном производстве, с
             использованием современного оборудования и проверенных временем
             технологий.</p>
-          <img src="img/svgs/eco.svg" alt="leaf icon">
+          <img src="img/eco.svg" alt="leaf icon">
           <p>Для приготовления мороженого используются настоящие сливки и молоко
             высочайшего качества. Все дополнительные ингредиенты и добавки
             произведены из натурального, экологически чистого сырья.</p>
-          <img src="img/svgs/cow.svg" alt="cow icon">
+          <img src="img/cow.svg" alt="cow icon">
           <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <img src="img/svgs/thermometer.svg" alt="thermometer icon">
+          <img src="img/thermometer.svg" alt="thermometer icon">
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
         <section>
@@ -126,14 +126,14 @@
         <section>
           <div class="striped-bkg"></div>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-          <input type="text" value="email@example.com">
+          <input type="email" value="email@example.com">
           <button>Отправить</button>
         </section>
       </section>
       <section>
         <!-- iframe of google maps -->
         <img src="img/map.png"> <!-- temp -->
-        <img src="img/svgs/pin.svg" alt="pin">
+        <img src="img/pin.svg" alt="pin">
         <div>
           <p>Адрес главного офиса и офлайн-магазина:</p>
           <p><b>ул. Большая Конюшенная 19/8, <br>
@@ -147,14 +147,14 @@
     </main>
     <footer>
       <ul>
-        <li><img src="img/svgs/twitter.svg" alt="twitter link"></li>
-        <li><img src="img/svgs/instagram.svg" alt="instagram link"></li>
-        <li><img src="img/svgs/fb.svg" alt="facebook link"></li>
-        <li><img src="img/svgs/vk.svg" alt="vk link"></li>
+        <li><img src="img/twitter.svg" alt="twitter link"></li>
+        <li><img src="img/instagram.svg" alt="instagram link"></li>
+        <li><img src="img/fb.svg" alt="facebook link"></li>
+        <li><img src="img/vk.svg" alt="vk link"></li>
       </ul>
       <div >
         <div>
-          <img src="img/svgs/heart.svg" alt="heart">
+          <img src="img/heart.svg" alt="heart">
           <p><a href="#">Для поставщиков</a></p>
           <p><a href="#">О производстве</a></p>
         </div>
@@ -164,18 +164,18 @@
         </div>
       </div>
       <div>
-        <a>
-          <img src="img/htmlacad-small-logo.png" alt="small html academy">
-        </a>
-        <p>Сделано в <a href="https://htmlacademy.ru/">HTML Academy</a> © 2019</p>
+        <span>
+          <img src="img/htmlacad-small-logo.png" alt="small html academy logo">
+        </span>
+        <p>Сделано в <a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a> © 2019</p>
       </div>
     </footer>
     <!-- login form -->
     <section>
       <form method="post"
           action="https://dammytemplink.com">
-        <input type="text" name="email" placeholder="email@example.com">
-        <input type="text" name="password" placeholder="••••••••">
+        <input type="email" name="email" placeholder="email@example.com">
+        <input type="password" name="password">
         <button type="button">Войти</button>
         <a href="#">Забыли пароль?</a>
         <a href="#">Новая регистрация</a>
@@ -183,13 +183,13 @@
     </section>
     <!-- search -->
     <form>
-      <input type="text" name="search">
+      <input type="search" name="search">
     </form>
     <!-- obratnaya svyaz' -->
     <form>
       <h4>Мы обязательно вам ответим!"</h4>
       <input type="text" name="fullname">
-      <input type="text" name="email">
+      <input type="email" name="email">
       <textarea name="comments" rows="8" cols="80">В свободной форме
       </textarea>
       <button type="button">Отправить</button>
