--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
+    <header class="header">
       <span>
         <img src="img/logo.svg" alt="Gllacy Shop Logo">
       </span>
@@ -29,10 +29,10 @@
       </nav>
       <ul>
         <li>
-          <button><img src="img/Search.png" alt="search item"></button>
+          <button class="button"><img src="img/Search.png" alt="search item"></button>
         </li>
         <li>
-          <button type="button"><img class="entrance-img" src="img/entrance.svg" alt="login">Вход</button>
+          <button class="button" type="button"><img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
         </li>
         <li>
           <a href="img/basket.svg">Пусто</a>
@@ -57,7 +57,7 @@
             <img src="img/cone2.png" alt="ice cream cone2"> -->
           </div>
           <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
-          <button type="button">Давайте оба!</button>
+          <button class="button" type="button">Давайте оба!</button>
           <div>
             <label class="dot-controller"></label>
             <label class="dot-controller"></label>
@@ -67,13 +67,13 @@
 
         <section class="promo-banners">
           <section class="raspberry-bkg">
-            <h3>Малинка даром!</h3>
+            <h3 class="header-h3">Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
               заказ банку малинового варенья бесплатно.</p>
             <a href="#">Хочу варенье!</></a>
           </section>
           <section class="chocolate-bkg">
-            <h3>Шоколадки даром!</h3>
+            <h3 class="header-h3">Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
               вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
               <a href="#">Хочу шоколадки!</a>
@@ -108,9 +108,9 @@
           </ul>
         </section>
       </section>
-      <section class="black-text">
+      <section class="benefits">
         <article class="waffle-bkg">
-          <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
+          <h2 class="header-h2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
           <img src="img/ice-cream.svg" alt="ice cream icon">
           <p>Все наше мороженое изготавливается на собственном производстве, с
@@ -126,28 +126,27 @@
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
         <section class="strawberry-bkg">
-          <h3>Новое в нашем блоге</h3>
-          <h4>10 способов сервировки фруктовых щербетов к столу</h4>
+          <h3 class="header-h3">Новое в нашем блоге</h3>
+          <h4 class="header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
-        <section>
-          <div class="striped-bkg"></div>
+        <section class="striped-bkg">
           <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-          <input type="email" value="email@example.com">
-          <button class="btn-send">Отправить</button>
+          <input class="email" type="email" value="email@example.com">
+          <button class="btn-send button">Отправить</button>
         </section>
       </section>
       <section>
         <iframe src="https://yandex.com/map-widget/v1/-/CCsfeZKz" width="100%" height="400" frameborder="1" allowfullscreen="true"></iframe>
         <!-- <img src="img/map.png">  -->
         <img src="img/pin.svg" alt="pin">
-        <section class="black-text">
+        <section class="location-info">
           <p>Адрес главного офиса и офлайн-магазина:</p>
-          <p><b>ул. Большая Конюшенная 19/8, <br>
+          <p><b>ул. Большая Конюшенная 19/8,
             Санкт-Петербург</b></p>
           <p>Для заказов по телефону:</p>
-          <p><b>8 812 450-25-25</b><br>
+          <p><b>8 812 450-25-25</b>
             <span>(с 10 до 20 ежедневно)</span></p>
-          <button type="button">Форма обратной связи</button>
+          <button class="button" type="button">Форма обратной связи</button>
         </section>
       </section>
     </main>
@@ -180,9 +179,9 @@
     <section>
       <form method="post"
           action="https://dammytemplink.com">
-        <input type="email" name="email" placeholder="email@example.com">
-        <input type="password" name="password">
-        <button type="button">Войти</button>
+        <input class="email" type="email" name="email" placeholder="email@example.com"><br>
+        <input type="password" name="password"><br>
+        <button class="button" type="button">Войти</button>
         <a href="#">Забыли пароль?</a>
         <a href="#">Новая регистрация</a>
       </form>
@@ -193,12 +192,12 @@
     </form>
     <!-- obratnaya svyaz' -->
     <form>
-      <h4>Мы обязательно вам ответим!"</h4>
-      <input type="text" name="fullname">
-      <input type="email" name="email">
+      <h4 class="header-h4">Мы обязательно вам ответим!"</h4>
+      <input type="text" name="fullname"><br>
+      <input class="email" type="email" name="email"><br>
       <textarea name="comments" rows="8" cols="80">В свободной форме
       </textarea>
-      <button type="button">Отправить</button>
+      <button class="button" type="button">Отправить</button>
     <form>
   </body>
 </html>
