finish task #6 Grids
add basic flex grid for header, main and footer

--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
-    <header>
+  <body class="main-flex-wrapper">
+    <header class="header">
       <span>
         <img src="img/logo.svg" alt="Gllacy Shop Logo">
       </span>
@@ -40,7 +40,7 @@
       </ul>
     </header>
 
-      <main>
+      <main class="main">
         <section>
           <span>С 10 до 20, ежедневно</span>
           <span>8 812 450-25-25</span>
@@ -124,7 +124,7 @@
           </ul>
         </section>
       </main>
-      <footer>
+      <footer class="footer">
         <ul>
           <li><img src="img/twitter.svg" alt="twitter link"></li>
           <li><img src="img/instagram.svg" alt="instagram link"></li>
@@ -150,7 +150,7 @@
         </div>
       </footer>
 
-      <section>
+      <section class="visually-hidden">
         <form>
           <div>
             <button class="delete-btn button" type="button">x</button>
