--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
+  <body class="main-flex-wrapper">
     <header class="header">
       <span>
         <img src="img/logo.svg" alt="Gllacy Shop Logo">
@@ -39,7 +39,7 @@
         </li>
       </ul>
     </header>
-    <main>
+    <main class="main">
       <section>
         <section>
           <div>
@@ -150,7 +150,7 @@
         </section>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <ul>
         <li><img src="img/twitter.svg" alt="twitter link"></li>
         <li><img src="img/instagram.svg" alt="instagram link"></li>
@@ -176,7 +176,7 @@
       </div>
     </footer>
     <!-- login form -->
-    <section>
+    <section class="visually-hidden">
       <form method="post"
           action="https://dammytemplink.com">
         <input class="email" type="email" name="email" placeholder="email@example.com"><br>
@@ -187,11 +187,11 @@
       </form>
     </section>
     <!-- search -->
-    <form>
+    <form class="visually-hidden">
       <input type="search" name="search">
     </form>
     <!-- obratnaya svyaz' -->
-    <form>
+    <form class="visually-hidden">
       <h4 class="header-h4">Мы обязательно вам ответим!"</h4>
       <input type="text" name="fullname"><br>
       <input class="email" type="email" name="email"><br>
