add styling for cart on catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -150,18 +150,18 @@
         </div>
       </footer>
 
-      <section class="visually-hidden">
+      <section class="cart-container">
         <form>
-          <div>
-            <button class="delete-btn button" type="button">x</button>
-            <img src="img/sm-ic-1.png" alt="ice cream image">
+          <div class="cart-item">
+            <button class="delete-btn cart-item-button" type="button"><span>x</span></button>
+            <img class="cart-item-icon" src="img/sm-ic-1.png" alt="ice cream image">
             <p>Пломбир с апельсиновым джемом</p>
             <p>1,5 кг х 200 руб.</p>
             <p>200 руб.</p>
           </div>
-          <div>
-            <button class="delete-btn button" type="button">x</button>
-            <img src="img/sm-ic-2.png" alt="ice cream image">
+          <div class="cart-item">
+            <button class="delete-btn cart-item-button" type="button"><span>x</span></button>
+            <img class="cart-item-icon" src="img/sm-ic-2.png" alt="ice cream image">
             <p>Клубничный пломбир с присыпкой из белого шоколада</p>
             <p>1,5 кг х 300 руб.</p>
             <p>450 руб.</p>
