--- a/catalog.html
+++ b/catalog.html
@@ -153,22 +153,42 @@
       <section class="cart-container">
         <form>
           <div class="cart-item">
-            <button class="delete-btn cart-item-button" type="button"><span>x</span></button>
-            <img class="cart-item-icon" src="img/sm-ic-1.png" alt="ice cream image">
-            <p>Пломбир с апельсиновым джемом</p>
-            <p>1,5 кг х 200 руб.</p>
-            <p>200 руб.</p>
+              <button class="delete-btn cart-item-button" type="button"><span>x</span></button>
+              <img class="cart-item-icon" src="img/sm-ic-1.png" alt="ice cream image">
+            <div class="cart-item-text-total">
+              <div class="cart-item-title">
+                <p>Пломбир с апельсиновым джемом</p>
+              </div>
+              <div class="cart-item-calculation">
+                <p>1,5 кг х 200 руб.</p>
+              </div>
+              <div class="cart-item-single-item-cost">
+                <p>200 руб.</p>
+              </div>
+            </div>
+          </div>
+          <div class="clear">
           </div>
           <div class="cart-item">
-            <button class="delete-btn cart-item-button" type="button"><span>x</span></button>
-            <img class="cart-item-icon" src="img/sm-ic-2.png" alt="ice cream image">
-            <p>Клубничный пломбир с присыпкой из белого шоколада</p>
-            <p>1,5 кг х 300 руб.</p>
-            <p>450 руб.</p>
+              <button class="delete-btn cart-item-button" type="button"><span>x</span></button>
+              <img class="cart-item-icon" src="img/sm-ic-2.png" alt="ice cream image">
+            <div class="cart-item-text-total">
+              <div class="cart-item-title">
+                <p>Клубничный пломбир с присыпкой из белого шоколада</p>
+              </div>
+              <div class="cart-item-calculation">
+                <p>1,5 кг х 300 руб.</p>
+              </div>
+              <div class="cart-item-single-item-cost">
+                <p>450 руб.</p>
+              </div>
+            </div>
           </div>
           <hr>
-          <p>Итого: 750 руб.</p>
-          <button class="button" type="button" name="Submit_order">Оформить заказ</button>
+          <div class="cart-total-price-wrapper">
+            <p>Итого: 750 руб.</p>
+            <button class="button" type="button" name="Submit_order">Оформить заказ</button>
+          </div>
         </form>
       </section>
   </body>
