--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="main-flex-wrapper">
     <header class="header">
-      <span>
+      <span class="company-logo">
         <img src="img/logo.svg" alt="Gllacy Shop Logo">
       </span>
       <nav>
@@ -27,7 +27,7 @@
             <li><a href="#">О компании</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="search-login-cart">
         <li>
           <button class="button"><img src="img/Search.png" alt="search item"></button>
         </li>
@@ -40,73 +40,70 @@
       </ul>
     </header>
     <main class="main">
-      <section>
-        <section>
-          <div>
-            <span>С 10 до 20, ежедневно</span>
-            <span>8 812 450-25-25</span>
-          </div>
-          <div class="cone-bkg">
+      <section class="hero-banner">
+        <div>
+          <span>С 10 до 20, ежедневно</span>
+          <span>8 812 450-25-25</span>
+        </div>
+        <div class="cone-bkg">
+          <div class="cone1"></div>
+          <div class="cone2"></div>
+          <!-- <div class="cone2">
             <div class="cone1"></div>
-            <div class="cone2"></div>
-            <!-- <div class="cone2">
-              <div class="cone1"></div>
-            </div> -->
-            <!-- <div class="cone2"></div> -->
-            <!-- <img src="img/cone1.png" alt="ice cream cone1">
-            <img src="img/cone2.png" alt="ice cream cone2"> -->
-          </div>
-          <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
-          <button class="button" type="button">Давайте оба!</button>
-          <div>
-            <label class="dot-controller"></label>
-            <label class="dot-controller"></label>
-            <label class="dot-controller"></label>
-          </div>
+          </div> -->
+          <!-- <div class="cone2"></div> -->
+          <!-- <img src="img/cone1.png" alt="ice cream cone1">
+          <img src="img/cone2.png" alt="ice cream cone2"> -->
+        </div>
+        <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
+        <button class="button" type="button">Давайте оба!</button>
+        <div>
+          <label class="dot-controller"></label>
+          <label class="dot-controller"></label>
+          <label class="dot-controller"></label>
+        </div>
+      </section>
+      <section class="promo-banners">
+        <section class="raspberry-bkg">
+          <h3 class="header-h3">Малинка даром!</h3>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
+            заказ банку малинового варенья бесплатно.</p>
+          <a href="#">Хочу варенье!</></a>
         </section>
-
-        <section class="promo-banners">
-          <section class="raspberry-bkg">
-            <h3 class="header-h3">Малинка даром!</h3>
-            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
-              заказ банку малинового варенья бесплатно.</p>
-            <a href="#">Хочу варенье!</></a>
-          </section>
-          <section class="chocolate-bkg">
-            <h3 class="header-h3">Шоколадки даром!</h3>
-            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
-              вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-              <a href="#">Хочу шоколадки!</a>
-          </section>
+        <section class="chocolate-bkg">
+          <h3 class="header-h3">Шоколадки даром!</h3>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+            вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a href="#">Хочу шоколадки!</a>
         </section>
-        <section class="most-popular-flavors">
-          <ul>
-            <li>
-              <span>HIT</span>
-              <img src="img/1(1).png" alt="ice cream photo">
-              <p>310<span>₽/кг</span></p>
-              <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-            </li>
-            <li>
-              <span>HIT</span>
-              <img src="img/1(2).png" alt="ice cream photo">
-              <p>380<span>₽/кг</span></p>
-              <p>Сливочно-кофейное с кусочками шоколада</p>
-            </li>
-            <li>
-              <span>HIT</span>
-              <img src="img/1(3).png" alt="ice cream photo">
-              <p>355<span>₽/кг</span></p>
-              <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-            </li>
-            <li>
-              <span>HIT</span>
-              <img src="img/2(1).png" alt="ice cream photo">
-              <p>415<span>₽/кг</span></p>
-              <p>Сливочное крем-брюле с карамельной подливкой</p>
-            </li>
-          </ul>
-        </section>
+      </section>
+      <section class="most-popular-flavors">
+        <ul>
+          <li>
+            <span>HIT</span>
+            <img src="img/1(1).png" alt="ice cream photo">
+            <p>310<span>₽/кг</span></p>
+            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+          </li>
+          <li>
+            <span>HIT</span>
+            <img src="img/1(2).png" alt="ice cream photo">
+            <p>380<span>₽/кг</span></p>
+            <p>Сливочно-кофейное с кусочками шоколада</p>
+          </li>
+          <li>
+            <span>HIT</span>
+            <img src="img/1(3).png" alt="ice cream photo">
+            <p>355<span>₽/кг</span></p>
+            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+          </li>
+          <li>
+            <span>HIT</span>
+            <img src="img/2(1).png" alt="ice cream photo">
+            <p>415<span>₽/кг</span></p>
+            <p>Сливочное крем-брюле с карамельной подливкой</p>
+          </li>
+        </ul>
       </section>
       <section class="benefits">
         <article class="waffle-bkg">
@@ -125,6 +122,9 @@
           <img src="img/thermometer.svg" alt="thermometer icon">
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
+
+      </section>
+      <section class="news-and-subscribtion">
         <section class="strawberry-bkg">
           <h3 class="header-h3">Новое в нашем блоге</h3>
           <h4 class="header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
@@ -135,7 +135,7 @@
           <button class="btn-send button">Отправить</button>
         </section>
       </section>
-      <section>
+      <section class="contacts">
         <iframe src="https://yandex.com/map-widget/v1/-/CCsfeZKz" width="100%" height="400" frameborder="1" allowfullscreen="true"></iframe>
         <!-- <img src="img/map.png">  -->
         <img src="img/pin.svg" alt="pin">
@@ -151,7 +151,7 @@
       </section>
     </main>
     <footer class="footer">
-      <ul>
+      <ul class="social-media-contacts">
         <li><img src="img/twitter.svg" alt="twitter link"></li>
         <li><img src="img/instagram.svg" alt="instagram link"></li>
         <li><img src="img/fb.svg" alt="facebook link"></li>
@@ -168,7 +168,7 @@
           <p><a href="#">Экологические стандарты</a></p>
         </div>
       </div>
-      <div>
+      <div class="company-brand">
         <span>
           <img src="img/htmlacad-small-logo.png" alt="small html academy logo">
         </span>
