--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
          <h1 class="visually-hidden">Gllacy Shop</h1>
          <h2 class="header-h2">Сливочное мороженое</h2>
       </section>
-      <section class="filter-results">
+      <section class="filter">
         <form method="post" action="https://echo.htmlacademy.ru">
           <label for="drop-down-sorting">Сортировка:</label>
           <select id="drop-down-sorting">
@@ -74,43 +74,69 @@
           <button class="button" type="button">Применить</button>
         </form>
       </section>
-      <section class="list-items">
-        <img src="img/1(1).png" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-        <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-        <p>310 ₽/<span>кг</span></p>
-        <img src="img/2(1).png" alt="Сливочно-кофейное с кусочками шоколада">
-        <p>Сливочно-кофейное с кусочками шоколада</p>
-        <p>370 ₽/<span>кг</span></p>
-        <img src="img/3(1).png" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-        <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-        <p>355 ₽/<span>кг</span></p>
-        <img src="img/4(1).png" alt="Сливочное крем-брюле с карамельной подливкой">
-        <p>Сливочное крем-брюле с карамельной подливкой</p>
-        <p>415 ₽/<span>кг</span></p>
-        <img src="img/1(2).png" alt="Сливочное с брусничным джемом">
-        <p>Сливочное с брусничным джемом</p>
-        <p>325 ₽/<span>кг</span></p>
-        <img src="img/2(2).png" alt="Сливочно-черничное с цельными ягодами черники ">
-        <p>Сливочно-черничное с цельными ягодами черники </p>
-        <p>410 ₽/<span>кг</span></p>
-        <img src="img/3(2).png" alt="Сливочно-лимонное с карамельной присыпкой">
-        <p>Сливочно-лимонное с карамельной присыпкой</p>
-        <p>375 ₽/<span>кг</span></p>
-        <img src="img/4(2).png" alt="Сливочное с шоколадной стружкой">
-        <p>Сливочное с шоколадной стружкой</p>
-        <p>320 ₽/<span>кг</span></p>
-        <img src="img/1(3).png" alt="Сливочно-ванильное с кусочками шоколада">
-        <p>Сливочно-ванильное с кусочками шоколада</p>
-        <p>440 ₽/<span>кг</span></p>
-        <img src="img/2(3).png" alt="Сливочноe с ментоловым сиропом">
-        <p>Сливочноe с ментоловым сиропом</p>
-        <p>435 ₽/<span>кг</span></p>
-        <img src="img/3(3).png" alt="Сливочное с кусочками черного шоколада">
-        <p>Сливочное с кусочками черного шоколада</p>
-        <p>355 ₽/<span>кг</span></p>
-        <img src="img/4(3).png" alt="Сливочное с мятным сиропом">
-        <p>Сливочное с мятным сиропом</p>
-        <p>420 ₽/<span>кг</span></p>
+      <section class="products">
+        <ul class="items-list">
+          <li class="list-item">
+            <img src="img/1(1).png" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+            <p>310 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/2(1).png" alt="Сливочно-кофейное с кусочками шоколада">
+            <p>Сливочно-кофейное с кусочками шоколада</p>
+            <p>370 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/3(1).png" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <p>355 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/4(1).png" alt="Сливочное крем-брюле с карамельной подливкой">
+            <p>Сливочное крем-брюле с карамельной подливкой</p>
+            <p>415 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/1(2).png" alt="Сливочное с брусничным джемом">
+            <p>Сливочное с брусничным джемом</p>
+            <p>325 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/2(2).png" alt="Сливочно-черничное с цельными ягодами черники ">
+            <p>Сливочно-черничное с цельными ягодами черники </p>
+            <p>410 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/3(2).png" alt="Сливочно-лимонное с карамельной присыпкой">
+            <p>Сливочно-лимонное с карамельной присыпкой</p>
+            <p>375 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/4(2).png" alt="Сливочное с шоколадной стружкой">
+            <p>Сливочное с шоколадной стружкой</p>
+            <p>320 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/1(3).png" alt="Сливочно-ванильное с кусочками шоколада">
+            <p>Сливочно-ванильное с кусочками шоколада</p>
+            <p>440 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/2(3).png" alt="Сливочноe с ментоловым сиропом">
+            <p>Сливочноe с ментоловым сиропом</p>
+            <p>435 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/3(3).png" alt="Сливочное с кусочками черного шоколада">
+            <p>Сливочное с кусочками черного шоколада</p>
+            <p>355 ₽/<span>кг</span></p>
+          </li>
+          <li class="list-item">
+            <img src="img/4(3).png" alt="Сливочное с мятным сиропом">
+            <p>Сливочное с мятным сиропом</p>
+            <p>420 ₽/<span>кг</span></p>
+          </li>
+        </ul>
       </section>
       <section class="next-page-list">
         <ul class="pages-list">
