--- a/index.html
+++ b/index.html
@@ -41,63 +41,59 @@
     </header>
     <main class="main">
       <section class="hero-banner">
-        <div>
-          <span>С 10 до 20, ежедневно</span>
-          <span>8 812 450-25-25</span>
+        <div class="work-hours-and-contact-number">
+          <span class="work-hours">С 10 до 20, ежедневно</span>
+          <span class="contact-number">8 812 450-25-25</span>
         </div>
         <div class="cone-bkg">
           <div class="cone1"></div>
           <div class="cone2"></div>
-          <!-- <div class="cone2">
-            <div class="cone1"></div>
-          </div> -->
-          <!-- <div class="cone2"></div> -->
-          <!-- <img src="img/cone1.png" alt="ice cream cone1">
-          <img src="img/cone2.png" alt="ice cream cone2"> -->
         </div>
-        <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
-        <button class="button" type="button">Давайте оба!</button>
-        <div>
+        <section class="title-and-action-btn">
+          <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
+          <button class="button" type="button">Давайте оба!</button>
+        </section>
+        <div class="image-slider-controlls">
           <label class="dot-controller"></label>
           <label class="dot-controller"></label>
           <label class="dot-controller"></label>
         </div>
       </section>
       <section class="promo-banners">
-        <section class="raspberry-bkg">
+        <section class="promo-banner raspberry-bkg">
           <h3 class="header-h3">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
             заказ банку малинового варенья бесплатно.</p>
           <a href="#">Хочу варенье!</></a>
         </section>
-        <section class="chocolate-bkg">
+        <section class="promo-banner chocolate-bkg">
           <h3 class="header-h3">Шоколадки даром!</h3>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
             <a href="#">Хочу шоколадки!</a>
         </section>
       </section>
-      <section class="most-popular-flavors">
+      <section class="list-of-hits">
         <ul>
-          <li>
+          <li class="hit">
             <span>HIT</span>
             <img src="img/1(1).png" alt="ice cream photo">
             <p>310<span>₽/кг</span></p>
             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
           </li>
-          <li>
+          <li class="hit">
             <span>HIT</span>
             <img src="img/1(2).png" alt="ice cream photo">
             <p>380<span>₽/кг</span></p>
             <p>Сливочно-кофейное с кусочками шоколада</p>
           </li>
-          <li>
+          <li class="hit">
             <span>HIT</span>
             <img src="img/1(3).png" alt="ice cream photo">
             <p>355<span>₽/кг</span></p>
             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
           </li>
-          <li>
+          <li class="hit">
             <span>HIT</span>
             <img src="img/2(1).png" alt="ice cream photo">
             <p>415<span>₽/кг</span></p>
@@ -105,7 +101,7 @@
           </li>
         </ul>
       </section>
-      <section class="benefits">
+      <section class="competitive-advantages">
         <article class="waffle-bkg">
           <h2 class="header-h2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
@@ -118,24 +114,27 @@
             высочайшего качества. Все дополнительные ингредиенты и добавки
             произведены из натурального, экологически чистого сырья.</p>
           <img src="img/cow.svg" alt="cow icon">
-          <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <p>Закупка ингредиентов  производится только у проверенных фермерских
+            хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
           <img src="img/thermometer.svg" alt="thermometer icon">
-          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном
+            термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
-
       </section>
       <section class="news-and-subscribtion">
-        <section class="strawberry-bkg">
+        <section class="news strawberry-bkg">
           <h3 class="header-h3">Новое в нашем блоге</h3>
           <h4 class="header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
-        <section class="striped-bkg">
-          <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+        <section class="subscribe striped-bkg">
+          <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будете
+            всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
+            не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <input class="email" type="email" value="email@example.com">
           <button class="btn-send button">Отправить</button>
         </section>
       </section>
-      <section class="contacts">
+      <section class="main-contact-info">
         <iframe src="https://yandex.com/map-widget/v1/-/CCsfeZKz" width="100%" height="400" frameborder="1" allowfullscreen="true"></iframe>
         <!-- <img src="img/map.png">  -->
         <img src="img/pin.svg" alt="pin">
